# retronomicon

./: .dockerignore  .env.development  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.debug.toml  diesel.toml  package-lock.json  package.json  rust-toolchain.toml  seed.sh
.cargo/: config.toml
api-backend/: Cargo.toml  Rocket.toml  diesel.toml
api-backend/migrations/2023-09-13-180236_initial/: down.sql  up.sql
api-backend/migrations/2023-09-13-183659_initial_data/: down.sql  up.sql
api-backend/src/: db.rs  error.rs  main.rs  models.rs  routes.rs  schema.rs  types.rs  user.rs  utils.rs
api-backend/src/fairings/: cors.rs
api-backend/src/guards/: users.rs
api-backend/src/models/: artifact.rs  cores.rs  platforms.rs  systems.rs  teams.rs  users.rs
api-backend/src/models/cores/: releases.rs
api-backend/src/routes/: auth.rs  groups.rs  me.rs  platforms.rs  teams.rs  users.rs  v1.rs
api-backend/src/routes/v1/: auth.rs  cores.rs  me.rs  platforms.rs  systems.rs  tags.rs  teams.rs  users.rs
api-backend/src/routes/v1/cores/: releases.rs
api-backend/src/utils/: acls.rs
backend/: Cargo.toml  Rocket.toml
backend/migrations/2023-10-11-002445_version_number/: down.sql  up.sql
backend/migrations/2023-10-19-010732_remove_sha512/: up.sql
backend/migrations/2023-10-19-153428_add_games/: up.sql
backend/migrations/2023-11-09-212034_sha1/: down.sql  up.sql
backend/migrations/2024-01-21-052827_game_images/: up.sql
backend/src/: config.rs  db.rs  fairings.rs  guards.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  utils.rs
backend/src/fairings/: config.rs  cors.rs  template.rs
backend/src/guards/: emailer.rs  storage.rs  users.rs
backend/src/guards/storage/: buckets.rs
backend/src/models/: artifact.rs  cores.rs  games.rs  platforms.rs  systems.rs  tags.rs  teams.rs  users.rs
backend/src/models/cores/: releases.rs
backend/src/routes/: auth.rs  v1.rs
backend/src/routes/v1/: auth.rs  cores.rs  games.rs  me.rs  platforms.rs  systems.rs  tags.rs  teams.rs  users.rs
backend/src/routes/v1/cores/: releases.rs
backend/src/utils/: acls.rs
backend/tests/: Rocket.test.toml  cucumber.rs
backend/tests/features/: game.feature  game_images.feature  teams.feature  user.feature
backend/tests/ghenkins/: mod.rs
backend/tests/user/: mod.rs
certs/: digitalocean.crt
datary/: Cargo.toml
datary/src/: dat.rs
docs/: acls.md  database.puml
frontend/: .env.development  package-lock.json  package.json
frontend/src/: App.tsx  setupProxy.js
release/digitalocean/: alpha.yaml
retronomicon-cli/: Cargo.toml  README.md
retronomicon-cli/src/: main.rs
retronomicon-db/: Cargo.toml
retronomicon-db/migrations/2023-09-13-180236_initial/: up.sql
retronomicon-db/migrations/2023-10-19-010732_remove_sha512/: down.sql
retronomicon-db/migrations/2023-10-19-153428_add_games/: down.sql
retronomicon-db/migrations/2024-01-21-052827_game_images/: down.sql
retronomicon-db/migrations/2024-01-24-175322_user_password/: down.sql  up.sql
retronomicon-db/migrations/2024-01-26-171228_user_unique_email/: down.sql  up.sql
retronomicon-db/migrations/2024-02-05-174222_image_url_in_db/: down.sql  up.sql
retronomicon-db/migrations/2024-02-27-191401_slug_keyword/: down.sql  up.sql
retronomicon-db/src/: db.rs  lib.rs  models.rs  pages.rs  schema.rs  types.rs
retronomicon-db/src/db/: ssl_pool.rs
retronomicon-db/src/models/: artifact.rs  cores.rs  games.rs  images.rs  platforms.rs  systems.rs  tags.rs  teams.rs  users.rs
retronomicon-db/src/models/cores/: releases.rs
retronomicon-db/src/models/users/: password.rs
retronomicon-dto/: Cargo.toml  README.md
retronomicon-dto/src/: artifact.rs  auth.rs  client.rs  cores.rs  details.rs  encodings.rs  error.rs  games.rs  images.rs  lib.rs  paging.rs  params.rs  platform.rs  platforms.rs  systems.rs  tags.rs  teams.rs  types.rs  user.rs
retronomicon-dto/src/cores/: releases.rs
retronomicon-dto/src/encodings/: base64.rs  hex.rs
retronomicon-dto/src/params/: paging.rs  range.rs
scripts/: release.sh  seed.sh
templates/: email-verification.hbs
