[package]
name = "backend"
publish = false
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "chrono", "extras"] }
diesel_migrations = "2.1"
dotenvy = "0.15"
hex = "0.4.3"
jsonwebtoken = "8.1.1"
md5 = "0.7.0"
once_cell = "1.18.0"
regex = "1.9.5"
reqwest = { version = "0.11.20", default-features = false, features = ["json", "rustls-tls"] }
retronomicon-dto = { path = "../retronomicon-dto", features = ["rocket"] }
rocket = { version = "0.5.0", features = ["json", "secrets", "tls"] }
rocket-multipart-form-data = "0.10.6"
rocket_db_pools = { version = "0.1.0", features = ["diesel_postgres"] }
rocket_oauth2 = { version = "0.5.0", features = ["hyper_rustls_adapter"] }
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc", "secrets"] }
rocket_prometheus = "0.10.0"
rust-s3 = "0.34.0-rc4"
rustls = "0.21.7"
rustls-native-certs = "0.6.2"
rustls-pemfile = "2.0.0-alpha.1"
scoped-futures = "0.1.3"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.64"
sha1 = "0.10.6"
sha2 = "0.10.8"
tokio-postgres = "0.7.10"
tokio-postgres-rustls = "0.10.0"
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["v4"] }
wildmatch = "2.3.0"
