[package]
name = "backend"
publish = false
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"
doc = false

[[test]]
name = "cucumber"
harness = false  # allows Cucumber to print output instead of libtest

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
handlebars = "5.1.1"
image = "0.24.8"
jsonwebtoken = "8.1.1"
lettre = "0.11.3"
md5 = "0.7.0"
once_cell = "1.18.0"
rand = "0.8.5"
regex = "1.9.5"
reqwest = { version = "0.11.20", default-features = false, features = ["json", "rustls-tls"] }
retronomicon-dto = { path = "../retronomicon-dto", features = ["rocket"] }
retronomicon-db = { path = "../retronomicon-db" }
rocket = { version = "0.5.0", features = ["json", "secrets", "tls"] }
rocket-multipart-form-data = "0.10.6"
rocket_oauth2 = { version = "0.5.0", features = ["hyper_rustls_adapter"] }
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc", "secrets"] }
rocket_prometheus = "0.10.0"
rust-s3 = "0.34.0-rc4"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.64"
sha1 = "0.10.6"
sha2 = "0.10.8"
tokio-postgres = "0.7.10"
tokio-postgres-rustls = "0.10.0"
url = "2.5.0"
wildmatch = "2.3.0"

[dev-dependencies]
backend = { path = "." }
cucumber = { version = "0.20.2", features = ["libtest"] }
tokio = "1.35.1"
