[package]
name = "retronomicon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.24", features = [ "derive", "env" ] }
clap-verbosity-flag = "2.0.1"
reqwest = { version = "0.11.20", features = ["json"] }
retronomicon-dto = { path = "../retronomicon-dto" }
oauth2 = { version = "4.4.1", features = ["reqwest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.4.0"
