[package]
name = "retronomicon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A tool for managing the retronomicon database, including uploading and downloading artifacts."
repository = "https://github.com/golem-fpga/retronomicon.git"
readme = "README.md"
homepage = "https://retronomicon.land"
keywords = ["retronomicon", "fpga", "database", "release", "emulation"]
categories = ["development-tools", "hardware", "emulators"]
authors = [
    "Golem-FPGA",
    "Hans Larsen <hans@retronomicon.dev>"
]

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31" }
clap = { version = "4.3.24", features = [ "derive", "env" ] }
clap-verbosity-flag = "2.0.1"
datary = { path = "../datary", version = "0.1.0" }
hex = "0.4.3"
mime_guess2 = "2.0.5"
reqwest = { version = "0.11.20", features = ["stream", "json", ] }
retronomicon-dto = { path = "../retronomicon-dto", version = "0.2.0", features = ["cli", "client"] }
oauth2 = { version = "4.4.1", features = ["reqwest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.4.0"
