[package]
name = "retronomicon-dto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = { version = "0.25.0", features = ["derive"] }
schemars = { version = "0.8.15", optional = true }

[dependencies.okapi]
git = "https://github.com/GREsau/okapi.git"
rev = "345e1176"
optional = true
version = "0.7.0-rc.1"
features = ["impl_json_schema", "preserve_order"]

[features]
rocket = ["dep:rocket", "openapi"]
openapi = ["okapi", "schemars"]
