[package]
name = "retronomicon-dto"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Data transfer objects for the Retronomicon API"
repository = "https://github.com/golem-fpga/retronomicon.git"
readme = "README.md"
homepage = "https://retronomicon.land"
keywords = ["retronomicon", "api", "dto"]
categories = ["api", "emulator", "fpga", "retrocomputing", "retrogaming"]
authors = [
    "Golem-FPGA",
    "Hans Larsen <hans@retronomicon.dev>"
]

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.8", features = ["derive"], optional = true }
hex = "0.4.3"
mime_guess = { version = "2.0.4", optional = true }
reqwest = { version = "0.11.22", optional = true, features = ["json", "multipart"] }
rocket = { version = "0.5.0-rc.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = { version = "0.25.0", features = ["derive"] }
schemars = { version = "0.8.15", optional = true, features = ["url"] }
thiserror = "1.0.50"
url = { version = "2.4.1", features = ["serde"] }

[dependencies.okapi]
git = "https://github.com/GREsau/okapi.git"
rev = "345e1176"
optional = true
version = "0.7.0-rc.1"
features = ["impl_json_schema"]

[features]
cli = ["clap"]
client = ["reqwest", "mime_guess"]
blocking = ["reqwest/blocking"]
rocket = ["dep:rocket", "openapi"]
openapi = ["okapi", "schemars"]
